--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
             width: 50%;
             height: 100%;
             position: relative;
+            display: flex;
+            flex-direction: column;
+        }
+        #viewer-title {
+            background-color: #006634;
+            color: white;
+            font-weight: bold;
+            padding: 10px 15px;
+            text-align: center;
+            font-size: 16px;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+        }
+        #viewer-title img {
+            height: 35px;
+            width: auto;
+        }
+        #viewer-content {
+            flex: 1;
+            position: relative;
         }
         #mini-map {
             position: absolute;
@@ -217,14 +240,20 @@
 <body>
     <div id="container">
         <div id="viewer">
-            <div id="loading">Loading Mapillary viewer...</div>
-            <div id="mini-map"></div>
-            <div id="mini-map-loading">Loading map data...</div>
-            <button id="reload-minimap-btn" title="Reload image data">🔄 Reload</button>
-            <button id="mapillary-link-btn">
-                <img src="https://play-lh.googleusercontent.com/z3qzEc13E2sDWky9LgqADojcdy8hrX_szuAAeX21k_dFe7GNXLIYXJtOu5RcE3_5Jz8" alt="Mapillary">
-                Open in Mapillary Web
-            </button>
+            <div id="viewer-title">
+                <img src="https://media.licdn.com/dms/image/v2/D4E0BAQFph8QV3f9NJg/company-logo_200_200/B4EZdp0GrqHsA0-/0/1749826956321/timmons_group_logo?e=2147483647&v=beta&t=DartXpUkAR5eb0QHyBDlpKO_yX4vzaD3DIkHRLNzrMM" alt="Timmons Group">
+                <span>Petersburg, VA Pavement/Asset Data Collector</span>
+            </div>
+            <div id="viewer-content">
+                <div id="loading">Loading Mapillary viewer...</div>
+                <div id="mini-map"></div>
+                <div id="mini-map-loading">Loading map data...</div>
+                <button id="reload-minimap-btn" title="Reload image data">🔄 Reload</button>
+                <button id="mapillary-link-btn">
+                    <img src="https://play-lh.googleusercontent.com/z3qzEc13E2sDWky9LgqADojcdy8hrX_szuAAeX21k_dFe7GNXLIYXJtOu5RcE3_5Jz8" alt="Mapillary">
+                    Open in Mapillary Web
+                </button>
+            </div>
         </div>
         
         <div id="arcgis-container">
@@ -256,7 +285,7 @@
 
         // Initialize Mapillary Viewer
         const viewer = new mapillary.Viewer({
-            container: 'viewer',
+            container: 'viewer-content',
             accessToken: TOKEN,
             imageId: START_ID,
             component: {
