--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
             color: white;
             font-weight: bold;
             padding: 10px 15px;
-            text-align: center;
             font-size: 16px;
             flex-shrink: 0;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             gap: 12px;
         }
         #viewer-title img {
-            height: 35px;
+            height: 45px;
             width: auto;
         }
         #viewer-content {
@@ -105,8 +104,8 @@
         }
         #sync-btn {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            bottom: 10px;
+            left: 10px;
             background: #4285F4;
             color: white;
             font-weight: bold;
@@ -124,8 +123,8 @@
         }
         #edit-btn {
             position: absolute;
-            top: 58px;
-            right: 10px;
+            bottom: 58px;
+            left: 10px;
             background: #9C27B0;
             color: white;
             font-weight: bold;
@@ -143,8 +142,8 @@
         }
         #toggle-fov-btn {
             position: absolute;
-            top: 106px;
-            right: 10px;
+            bottom: 106px;
+            left: 10px;
             background: #FF9800;
             color: white;
             font-weight: bold;
