--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             flex-direction: column;
         }
         #viewer-title {
-            background-color: #006634;
+            background: linear-gradient(to right, #006634 0%, #006634 60%, transparent 75%);
             color: white;
             font-weight: bold;
             padding: 10px 15px;
