--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             flex-direction: column;
         }
         #viewer-title {
-            background: linear-gradient(to right, #006634 0%, #006634 60%, transparent 75%);
+            background: #006634;
             color: white;
             font-weight: bold;
-            padding: 10px 15px;
+            padding: 10px 10px;
             font-size: 18px;
             flex-shrink: 0;
             display: flex;
