--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         html, body {
             height: 100%;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
         #container {
             display: flex;
             width: 100vw;
             height: 100vh;
+            overflow: hidden;
         }
         #viewer {
-            width: 50%;
+            width: 40%;
             height: 100%;
             position: relative;
             display: flex;
@@ -39,8 +41,8 @@
             background: #006634;
             color: white;
             font-weight: bold;
-            padding: 2px 3px;
-            font-size: 18px;
+            padding: 5px 15px;
+            font-size: 16px;
             flex-shrink: 0;
             display: flex;
             align-items: center;
@@ -48,7 +50,7 @@
             gap: 12px;
         }
         #viewer-title img {
-            height: 50px;
+            height: 40px;
             width: auto;
         }
         #viewer-content {
@@ -57,17 +59,17 @@
         }
         #mini-map {
             position: absolute;
-            bottom: 60px;
+            bottom: 80px;
             right: 10px;
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 150px;
             border: 3px solid white;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.3);
             z-index: 1000;
         }
         #arcgis-container {
-            width: 50%;
+            width: 60%;
             height: 100%;
             position: relative;
         }
