--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             background: #006634;
             color: white;
             font-weight: bold;
-            padding: 5px 15px;
+            padding: 15px 15px;
             font-size: 16px;
             flex-shrink: 0;
             display: flex;
@@ -192,8 +192,8 @@
         }
         #reload-minimap-btn {
             position: absolute;
-            bottom: 210px;
-            right: 20px;
+            bottom: 100px;
+            right: 80px;
             background: #fff;
             color: #333;
             font-weight: bold;
@@ -249,7 +249,7 @@
                 <div id="loading">Loading Mapillary viewer...</div>
                 <div id="mini-map"></div>
                 <div id="mini-map-loading">Loading map data...</div>
-                <button id="reload-minimap-btn" title="Reload image data">🔄 Reload</button>
+                <button id="reload-minimap-btn" title="Reload image data">🔄 Force API Reload</button>
                 <button id="mapillary-link-btn">
                     <img src="https://play-lh.googleusercontent.com/z3qzEc13E2sDWky9LgqADojcdy8hrX_szuAAeX21k_dFe7GNXLIYXJtOu5RcE3_5Jz8" alt="Mapillary">
                     Open in Mapillary Web
