--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
             position: absolute;
             bottom: -40px;
             left: 0px;
-            background: #fff;
-            color: #333;
+            background: rgba(100, 100, 100, 0.8);
+            color: white;
             font-weight: bold;
             padding: 6px 10px;
-            border: 2px solid #1565C0;
+            border: none;
             border-radius: 4px;
             cursor: pointer;
             font-size: 11px;
@@ -238,7 +238,7 @@
             transition: all 0.2s;
         }
         #reload-minimap-btn:hover {
-            background: #1565C0;
+            background: rgba(80, 80, 80, 0.9);
             color: white;
         }
         #mapillary-link-btn {
